<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.snapsFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_outline"
        android:drawableLeft="@drawable/search_icon"
        android:hint="@string/search_text"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="9"
            android:text="@string/leader_board"
            android:textColor="@color/pale_pink"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/view_all"
            android:textColor="@color/pale_pink"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/snaps_leader_board_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snaps"
        android:textColor="@color/pale_pink"
        android:textSize="16dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/snaps_post_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>