<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragments.restaurantsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/location_icon"
        android:text="@string/temp_location" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_outline"
        android:drawableLeft="@drawable/search_icon"
        android:hint="@string/search_text"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurants_Image_filter_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurants_text_filter_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_rest"
        android:textSize="16dp"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/restaurant_filter_food_result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>