<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:id="@+id/filterFoodResultCard"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/food_result_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/profile_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_name"
            android:layout_margin="1dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_address"
            android:layout_margin="1dp"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/filled_rating_icon"
                android:text="@string/rest_ratings"
                android:textColor="@color/green" />

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_rest_ratings" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawableLeft="@drawable/location_icon"
                android:gravity="right"
                android:text="@string/rest_address"
                android:textColor="@color/pale_pink" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>